# pyrtaudio

./: .gitignore  CMakeLists.txt  DEVNOTES.md  Makefile  README.md  requirements.txt
projects/: CMakeLists.txt
projects/cppext/: cppextmodule.cpp
projects/custom/: CMakeLists.txt  README.md
projects/cyrtaudio/: CMakeLists.txt  cyrtaudio.cpp  cyrtaudio.pyx  rtaudio.pxd  rtaudio_c.pxd
projects/demo/: CMakeLists.txt  demomodule.cpp
projects/nbrtaudio/: CMakeLists.txt  nbrtaudio.cpp
projects/npyrtaudio/: CMakeLists.txt  npyrtaudio.cpp
projects/pbrtaudio/: CMakeLists.txt  pbrtaudio.cpp
projects/pyrtaudio/: CMakeLists.txt  pyrtaudio.cpp  rtaudiomodule.cpp  rtaudiomodule_min.cpp
projects/rtaudio/: CMakeLists.txt
projects/rtest/: CMakeLists.txt  rtestmodule.cpp
projects/rtmidi/: CMakeLists.txt
scripts/: get_debug_python.sh  get_debug_python2.sh
tests/: CMakeLists.txt  apinames.cpp  audioprobe.cpp  duplex.cpp  playraw.cpp  record.cpp  test_rtaudio.py  test_rtaudio_m.py
tests/archive/: Makefile
tests/archive/cppext/: CMakeLists.txt
tests/archive/pyrtaudio/: README.md  rtaudiomodule.bak.cpp  rtaudiomodule.cpp
tests/rtaudio/: playsaw.cpp  testall.cpp  teststops.cpp
tests/rtmidi/: CMakeLists.txt  apinames.cpp  cmidiin.cpp  midiclock.cpp  midiout.cpp  midiprobe.cpp  qmidiin.cpp  sysextest.cpp  testcapi.c
